--- a/wk2-2.css
+++ b/wk2-2.css
@@ -1,160 +1,205 @@
-.recipe-description h3,
-.recipe-steps h3,
-.recipe-tips h3{
-  font-size:2em;
-  border-bottom:1px solid;
+<!DOCTYPE html>
+<html>
+  <style>
+.post-body {
+  font-family: Arial, "文泉驛正黑", "WenQuanYi Zen Hei", "儷黑 Pro", "LiHei Pro", "微軟正黑體", "Microsoft JhengHei";
 }
-.timestamp {
-  border-bottom:1px solid;
-}
-.recipe-description p{
-  font: 1em/1.5 serif;
-}
+</style>
+<head>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+<script src="//s3-ap-northeast-1.amazonaws.com/justfont-user-script/jf-32036.js"></script>  
+  <meta charset="utf-8">
+  <title>icook recipe</title>
+</head>
+<body>
+  <!-- background image: http://subtlepatterns.com/patterns/food.png -->
+  <article id="recipe">
+    <h1>
+      【學阿基師做菜】❤ 15分鐘快速煮肉燥</h1>
+    <img alt="【學阿基師做菜】❤ 15分鐘快速煮肉燥" class="main-pic" src="http://cdn0.icook.tw/uploads/recipe/cover/70401/large_ae0feb48ad7ddec5.jpg">
 
-article#recipe{
-  max-width:600px;
-  padding:1em;  
-  background: url(http://subtlepatterns.com/patterns/food.png);
-    
-  border-radius:1em;
-}
+      <div class="meta">
+        <span class="fav-count"> <i class="fa fa-heart-o"></i> 2507</span>
+        <span class="views-count"> <i class="fa fa-eye "></i> 58732</span>
+        <time class="timestamp" datetime="2014-02-25"><i class="fa fa-clock-o "></i> 2014 年 02 月 25 日發佈
+        </time>
+        <a class="btn btn-default btn-sm" href="#">
+  <i class="fa fa-cog"></i> Settings</a>
+      </div>
 
-#recipe h1{
-  _font-size: 2em;
-  _color: rgba(200, 5, 0, 1);
-  text-shadow: 0px 1px 3px 	coral	;
-  border-radius:.1em;
-  margin: 0 0 20px;
-  cursor: pointer;
-  font-family: 'Poiret One',cursive,serif;
-  outline: 0;
-  border: 0;
-  width: 10x;
-  padding: 15px 10px 20px 15px;
-  background: darkred;
-  color: rgba(290, 200, 200, 1);
-  font-size: 2em;
-  -webkit-box-shadow: inset 0 -1px 10px 0 rgba(0,0,0,.1);
-  box-shadow: inset 0 -1px 10px 0 rgba(0,0,0,.1);
-  -webkit-transition: background 150ms ease-in-out;
-  -moz-transition: background 150ms ease-in-out;
-  -ms-transition: background 150ms ease-in-out;
-  -o-transition: background 150ms ease-in-out;
-  transition: background 150ms ease-in-out;
-  outline: 3px dashed #DB571F;
-  outline-offset: 2.6px;
+      <div class="recipe-description">
+        <h3><i class="fa fa-cutlery fa-fw"></i> 簡介</h3>
+          <p>貝蒂的「星期一晚餐」總是特別匆忙，不但得提前準備食材，就連煮菜的時間也得控制好，總而言之，就是想儘辦法讓菜快點上桌就是，今天餐桌的肉燥，就是平常看多了阿基師常在節目裡面教的一些小撇步，所以輕鬆快速的煮好肉燥囉❤</p>
 
-}
+        <h3><i class="fa fa-cutlery fa-fw"></i> 所需時間</h3>
+        <p>
+          <i class="fa fa-spinner fa-pulse"></i>
+          15 分鐘
+        </p>
 
-#recipe img{
-  width:100%;
-  padding:1em;
-  background-color:#ffffff;
-  box-sizing:border-box;
-}
+        <h3><i class="fa fa-cutlery fa-fw"></i> 食材</h3>
+        <ul class="ingredients">
+          <li>
+            <span class="ingredient-name">豬絞肉</span>
+            <span class="ingredient-unit">500g</span>
+          </li>
+          <li>
+            <span class="ingredient-name">紅蔥醬</span>
+            <span class="ingredient-unit">1大匙</span>
+          </li>
+          <li>
+            <span class="ingredient-name">醬油</span>
+            <span class="ingredient-unit">45ml(或3匙）</span>
+          </li>
+          <li>
+            <span class="ingredient-name">味晽</span>
+            <span class="ingredient-unit">15ml(或1匙）</span>
+          </li>
+          <li>
+            <span class="ingredient-name">米酒</span>
+            <span class="ingredient-unit">45ml(或3匙）</span>
+          </li>
+          <li>
+            <span class="ingredient-name">熱水</span>
+            <span class="ingredient-unit">250ml</span>
+          </li>
+          <li>
+            <span class="ingredient-name">Nutella巧克力醬</span>
+            <span class="ingredient-unit">1大匙</span>
+          </li>
+        </ul>
 
-.btn btn-default btn-sm{
-  text-align: center; padding: 10px; background: #555;
-  -webkit-transition-property: opacity;
-  -webkit-transition-duration: .5s;
-  opacity: .7;
-  
-}
-.btn btn-default btn-sm:hover{
-  opacity: 1;
-}
+    </div>
 
-.meta{
-  margin-top:1em;
-}
 
-.meta span{
-  margin-right:2em;
-}
+    <div class="recipe-steps">
+      <h3><i class="fa fa-cutlery fa-fw"></i> 作法</h3>
+     
+      <ol class="simple-list ">
+        <li>
+            先將豬絞肉下鍋乾煸（也就是不加任何油的意思），豬絞肉會先有水分，然後水分排乾變成有一點點豬油煸出，繼續煸炒到鍋底不見任何的油份。
+        </li>
+        <li>
+            加入醬油、熱水、味晽和米酒，以大火續煮5分鐘
+        </li>
+        <li>
+            再加入紅蔥醬和巧克力醬各1大匙，拿個湯匙輕輕攪拌使巧克力醬融化，此時鍋裡水分會慢慢收乾，收到「有點乾卻看得見湯汁」這樣的程度即可起鍋。
+        </li>
+      </ol>
+    </div>
 
-.ingredients{
-  list-style-type:none;
-}
+    <div class="recipe-tips box">
+      <h3><i class="fa fa-lightbulb-o"></i> 小撇步</h3>
+        <p><i class="fa fa-lightbulb-o"></i> 豬絞肉一定要“炒到乾”，這樣肉燥自然就會很爽口不油膩喔</p>
 
-.ingredients>li{
-  padding:3px 10px;
-}
+        <p><i class="fa fa-lightbulb-o"></i> Nutella巧克力醬可以用其他牌子巧克力醬替代</p>
 
-.ingredients>li:nth-child(odd){
-  background-color:rgba(255,255,255,0.5);
+        <p>貝蒂臉書粉絲專頁，歡迎大家來參觀^_^
+          <br><a class="btn btn-default btn-sm" href="http://www.facebook.com/BettyHou.liveinuk"rel="nofollow" >http://www.facebook.com/BettyHou.liveinuk<i class="fa fa-facebook-square"></i> </p>
+    </div>
+      
+  </article>
+</body>
+</html><!DOCTYPE html>
+<html>
+  <style>
+.post-body {
+  font-family: Arial, "文泉驛正黑", "WenQuanYi Zen Hei", "儷黑 Pro", "LiHei Pro", "微軟正黑體", "Microsoft JhengHei";
 }
+</style>
+<head>
+<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+<script src="//s3-ap-northeast-1.amazonaws.com/justfont-user-script/jf-32036.js"></script>  
+  <meta charset="utf-8">
+  <title>icook recipe</title>
+</head>
+<body>
+  <!-- background image: http://subtlepatterns.com/patterns/food.png -->
+  <article id="recipe">
+    <h1>
+      【學阿基師做菜】❤ 15分鐘快速煮肉燥</h1>
+    <img alt="【學阿基師做菜】❤ 15分鐘快速煮肉燥" class="main-pic" src="http://cdn0.icook.tw/uploads/recipe/cover/70401/large_ae0feb48ad7ddec5.jpg">
 
-.ingredient-name{
-  display:inline-block;
-  width:200px;
-  
-}
-.ingredient-unit{
-  color:blue;
-}
-.step{
-ol.labels-list {
-	list-style-type: none;
-	list-style-type: decimal !ie; /*IE 7- hack*/
-	
-	margin: 0;
-	margin-left: 1em;
-	padding: 0;
-	
-	counter-reset: li-counter;
-}
-ol.labels-list > li{
-	position: relative;
-	margin-bottom: 1.5em;
-	padding: 1.5em;
-	background-color: #eaeaea;
-}
-ol.labels-list > li:before {
-	position: absolute;
-	top: -0.3em;
-	left: -0.5em;
-	width: 1.8em;
-	height: 1.2em;
-	
-	font-size: 2em;
-	line-height: 1.2;
-	font-weight: bold;
-	text-align: center;
-	color: #464646;
-	background-color: #d0d0d0;
-	
-	transform: rotate(-20deg);
-	-ms-transform: rotate(-20deg);
-	-webkit-transform: rotate(-20deg);
-	z-index: 99;
-	overflow: hidden;
-	
-	content: counter(li-counter);
-	counter-increment: li-counter;
-}
-}
-/* This code is tested with latest version of Firefox and Chrome */
-.box {
-  position: relative;
-  margin:2em;
-  padding:1em;
-  background-color: #fff;
-  box-shadow: 0 1px 5px rgba(0,0,0,0.25), 0 0 50px rgba(0,0,0,0.1) inset;
-  border-radius: 2%     0%     0%     0% /     20%     0%     0%     0%;
-}
-.box:before {
-    position: absolute;
-    z-index: -1;
-    content: "";
-    top: 0px;
-    left: 0px;
-    width: 33%;
-    height: 25%;
-    box-shadow: -10px -10px 15px rgba(0,0,0,0.5);
-    -webkit-transform: rotate(7deg) translate(20px,25px) skew(20deg);
-     -moz-transform: rotate(7deg) translate(20px,25px) skew(20deg);
-     -ms-transform: rotate(7deg) translate(20px,25px) skew(20deg);
-     -o-transform: rotate(7deg) translate(20px,25px) skew(20deg);
-     transform: rotate(7deg) translate(20px,25px) skew(20deg);
-    }
+      <div class="meta">
+        <span class="fav-count"> <i class="fa fa-heart-o"></i> 2507</span>
+        <span class="views-count"> <i class="fa fa-eye "></i> 58732</span>
+        <time class="timestamp" datetime="2014-02-25"><i class="fa fa-clock-o "></i> 2014 年 02 月 25 日發佈
+        </time>
+        <a class="btn btn-default btn-sm" href="#">
+  <i class="fa fa-cog"></i> Settings</a>
+      </div>
 
+      <div class="recipe-description">
+        <h3><i class="fa fa-cutlery fa-fw"></i> 簡介</h3>
+          <p>貝蒂的「星期一晚餐」總是特別匆忙，不但得提前準備食材，就連煮菜的時間也得控制好，總而言之，就是想儘辦法讓菜快點上桌就是，今天餐桌的肉燥，就是平常看多了阿基師常在節目裡面教的一些小撇步，所以輕鬆快速的煮好肉燥囉❤</p>
+
+        <h3><i class="fa fa-cutlery fa-fw"></i> 所需時間</h3>
+        <p>
+          <i class="fa fa-spinner fa-pulse"></i>
+          15 分鐘
+        </p>
+
+        <h3><i class="fa fa-cutlery fa-fw"></i> 食材</h3>
+        <ul class="ingredients">
+          <li>
+            <span class="ingredient-name">豬絞肉</span>
+            <span class="ingredient-unit">500g</span>
+          </li>
+          <li>
+            <span class="ingredient-name">紅蔥醬</span>
+            <span class="ingredient-unit">1大匙</span>
+          </li>
+          <li>
+            <span class="ingredient-name">醬油</span>
+            <span class="ingredient-unit">45ml(或3匙）</span>
+          </li>
+          <li>
+            <span class="ingredient-name">味晽</span>
+            <span class="ingredient-unit">15ml(或1匙）</span>
+          </li>
+          <li>
+            <span class="ingredient-name">米酒</span>
+            <span class="ingredient-unit">45ml(或3匙）</span>
+          </li>
+          <li>
+            <span class="ingredient-name">熱水</span>
+            <span class="ingredient-unit">250ml</span>
+          </li>
+          <li>
+            <span class="ingredient-name">Nutella巧克力醬</span>
+            <span class="ingredient-unit">1大匙</span>
+          </li>
+        </ul>
+
+    </div>
+
+
+    <div class="recipe-steps">
+      <h3><i class="fa fa-cutlery fa-fw"></i> 作法</h3>
+     
+      <ol class="simple-list ">
+        <li>
+            先將豬絞肉下鍋乾煸（也就是不加任何油的意思），豬絞肉會先有水分，然後水分排乾變成有一點點豬油煸出，繼續煸炒到鍋底不見任何的油份。
+        </li>
+        <li>
+            加入醬油、熱水、味晽和米酒，以大火續煮5分鐘
+        </li>
+        <li>
+            再加入紅蔥醬和巧克力醬各1大匙，拿個湯匙輕輕攪拌使巧克力醬融化，此時鍋裡水分會慢慢收乾，收到「有點乾卻看得見湯汁」這樣的程度即可起鍋。
+        </li>
+      </ol>
+    </div>
+
+    <div class="recipe-tips box">
+      <h3><i class="fa fa-lightbulb-o"></i> 小撇步</h3>
+        <p><i class="fa fa-lightbulb-o"></i> 豬絞肉一定要“炒到乾”，這樣肉燥自然就會很爽口不油膩喔</p>
+
+        <p><i class="fa fa-lightbulb-o"></i> Nutella巧克力醬可以用其他牌子巧克力醬替代</p>
+
+        <p>貝蒂臉書粉絲專頁，歡迎大家來參觀^_^
+          <br><a class="btn btn-default btn-sm" href="http://www.facebook.com/BettyHou.liveinuk"rel="nofollow" >http://www.facebook.com/BettyHou.liveinuk<i class="fa fa-facebook-square"></i> </p>
+    </div>
+      
+  </article>
+</body>
+</html>
